@@ -137,8 +137,8 @@ for f in $GORA_HOME/$MODULE/build/*.job; do
   CLASSPATH=${CLASSPATH}:$f;
 done
 
-CLASSPATH=$CLASSPATH:$GORA_HOME/$MODULE/build/classes
-CLASSPATH=${CLASSPATH}:$GORA_HOME/$MODULE/build/test/classes
+CLASSPATH=$CLASSPATH:$GORA_HOME/$MODULE/target/classes
+CLASSPATH=${CLASSPATH}:$GORA_HOME/$MODULE/target/test/classes
 
 CLASSPATH=$CLASSPATH:$GORA_HOME/conf
 CLASSPATH=$CLASSPATH:$GORA_HOME/$MODULE/conf
